--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,10 @@
  
    </head>
    <body>
-       <h1>Aqui vamos a hacer un blog post</h1>
-       <p>Y este es el parrafor de inicio</p>
+       <div id = "container">
+           <div id ="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Y este es el parrafor de inicio donde vamos a explicar las cosas increibqles que see pueden hacer com ramas</p>
+            </div>
    </body>
 </html>
