--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,13 @@
    </head>
    <body>
        <div id = "container">
+           <div id = "cabecera">
+                Cabecera
+           </div>
            <div id ="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
-            <p>Y este es el parrafor de inicio donde vamos a explicar las cosas increibqles que see pueden hacer com ramas</p>
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafor de inicio donde vamos a explicar las cosas increibqles que see pueden hacer com ramas</p>
             </div>
+        </div>
    </body>
 </html>
