--- a/blogpost.html
+++ b/blogpost.html
@@ -10,5 +10,6 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafor de inicio donde vamos a explicar las cosas increibqles que see pueden hacer com ramas</p>
             </div>
+            <p>New World es un nuevo RPG creado por Amazon Games.</p>
    </body>
 </html>
