Linea 20. V1 post CABECERA

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
                 <p>Y bueno, borramos el parrafo de mierda que habia antes. DE NADA.</p>
+                <p>Al parecer no entendemos del todo la forma de comunicacion de estos seres. Desconozco si los podemos considerar vida inteligente.</p>
             </div>
         </div>
     </body>
