--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                 <p>Suscribete y dale like</p>
                 <p>Y bueno, borramos el parrafo de mierda que habia antes. DE NADA.</p>
                 <p>Al parecer no entendemos del todo la forma de comunicacion de estos seres. Desconozco si los podemos considerar vida inteligente.</p>
+                <p>Linea agregada en cabecera, rama1.</p>
             </div>
         </div>
     </body>
