--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
                 <p>Y bueno, borramos el parrafo de mierda que habia antes. DE NADA.</p>
                 <p>Al parecer no entendemos del todo la forma de comunicacion de estos seres. Desconozco si los podemos considerar vida inteligente.</p>
                 <p>Linea agregada en cabecera, rama1.</p>
+                <p>Bueno para que mentir, esta linea fue agregada en el brazo, rama2.</p>
             </div>
         </div>
     </body>
