--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
                 <p>Al parecer no entendemos del todo la forma de comunicacion de estos seres. Desconozco si los podemos considerar vida inteligente.</p>
                 <p>Linea agregada en cabecera, rama1.</p>
                 <p>Bueno para que mentir, esta linea fue agregada en el brazo, rama2.</p>
+                <p>Nuevamente rama2, esta vez escribiendo sobre un imitado de Michael Jackson que vi en el metro.</p>
             </div>
         </div>
     </body>
