--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,7 @@
                 <p>Bueno para que mentir, esta linea fue agregada en el brazo, rama2.</p>
                 <p>Nuevamente rama2, esta vez escribiendo sobre un imitado de Michael Jackson que vi en el metro.</p>
                 <p>Tercera y ultima linea por agregar en rama2, espero que por fin podamos ver alguna representacion visual en el grafico. Tal vez deba volver al main primero...</p>
+                <p>Donde estoy? Esto parece una mano...</p>
             </div>
         </div>
     </body>
