--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
                 <p>Nuevamente rama2, esta vez escribiendo sobre un imitado de Michael Jackson que vi en el metro.</p>
                 <p>Tercera y ultima linea por agregar en rama2, espero que por fin podamos ver alguna representacion visual en el grafico. Tal vez deba volver al main primero...</p>
                 <p>Donde estoy? Esto parece una mano...</p>
+                <p>Me pregunto cuando me creceran los dedos.</p>
             </div>
         </div>
     </body>
