--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
                 <p>Siento como si algo se hubiera desprendido de mi, aunque no del todo.</p>
                 <p>Donde estoy? Esto parece una mano...</p>
                 <p>Me pregunto cuando me creceran los dedos.</p>
+                <p>Bienvenidos?</p>
             </div>
         </div>
     </body>
