--- a/blogpost.html
+++ b/blogpost.html
@@ -21,7 +21,7 @@
                 <p>Tengo miedo de lo que este pasando en esas ramas...</p>
                 <p>Linea agregada en cabecera, rama1.</p>
                 <p>Bueno para que mentir, esta linea fue agregada en el brazo, rama2.</p>
-                <p>Nuevamente rama2, esta vez escribiendo sobre un imitado de Michael Jackson que vi en el metro.</p>
+                <p>Nuevamente rama2, esta vez escribiendo sobre un imitador de Michael Jackson que vi en el metro.</p>
                 <p>Tercera y ultima linea por agregar en rama2, espero que por fin podamos ver alguna representacion visual en el grafico. Tal vez deba volver al main primero...</p>
                 <p>Siento como si algo se hubiera desprendido de mi, aunque no del todo.</p>
                 <p>Donde estoy? Esto parece una mano...</p>
